added last changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <section>
     <div class="container fw-bold" >
-      <nav class="navbar navbar-sticky navbar-expand-lg navbar-light shadow-sm">
+      <nav class="navbar navbar-light">
         <div id="navigation" class="container-fluid" data-bs-theme="navbar navbar-light">
           <a class="navbar-brand fw-bold fs-4" style="font-family: Myriad Semi Bold;" href="#"><img class="bg-success" src="Assets/Images/favicon.png" alt="favicon" class="justify-content-center" style="font-family: Myriad Semi Bold;">PLANTX</a>
 
@@ -29,12 +29,12 @@
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
             <div class="navbar-nav" style="font-family: Myriad Semi Bold;">
-              <a class="nav-link active" data-bs-toggle="tab" aria-current="page" href="#Home">HOME</a>
-              <a class="nav-link px-lg-4" data-bs-toggle="tab" href="index.html#service">About</a>
-              <a class="nav-link px-lg-4" data-bs-toggle="tab" href="#">Products</a>
-              <a class="nav-link px-lg-4" data-bs-toggle="tab" href="#portfolio">FAQs</a>
-              <a class="nav-link px-lg-4" data-bs-toggle="tab" href="#">Contact Us</a>
-              <a class="nav-link px-lg-4" data-bs-toggle="tab" href="#"><img src="Assets/Images/moon(dark).svg" alt="#"></a>
+              <a class="nav-link" data-bs-toggle="tab" aria-current="page" href="#Home">HOME</a>
+              <a class="nav-link " data-bs-toggle="tab" href="index.html#service">About</a>
+              <a class="nav-link " data-bs-toggle="tab" href="#">Products</a>
+              <a class="nav-link " data-bs-toggle="tab" href="#portfolio">FAQs</a>
+              <a class="nav-link " data-bs-toggle="tab" href="#">Contact Us</a>
+              <a class="nav-link " data-bs-toggle="tab" href="#"><img src="Assets/Images/moon(dark).svg" alt="#"></a>
             </div>
           </div>
         </div>
